# dhop

./: .gitignore  Makefile  README.md  after.c  allocator.py  before.c  benchmark.sh  benchmark_dry_run.sh  benchmark_parallel.sh  gather.sh  hook.s  ida-loop-finder.py  initial_layout.c  layout.py  loop_finder.py  main.py  main2.py  naive.c  opseq.py  opt_trace_+64.txt  opt_trace_-64.txt  runner.py  server.py  slow_cat.py  solver.py  specgen.py  stat_header.csv  trace.py  tracer.py  utils.py  wrapper.c
allocator/avr-libc-2.0.0/: Makefile  README  diff.patch  malloc.c  realloc.c  stdlib_private.h
loop-finder/: CMakeLists.txt  README.md  main.cpp
solver/: directed.py  random.py
spec/: benchmark+48.py  benchmark+64.py  benchmark-48.py  benchmark-64.py  benchmark.py  naive.py
test/: benchmark_0noise.c  benchmark_2noise.c  bm_0noise_null  bm_0noise_null.c  bm_0noise_php-7.2.17  bm_0noise_php-7.2.17.c  bm_0noise_python-3.6.7  bm_0noise_python-3.6.7.c  bm_1noise_null  bm_1noise_null.c  bm_1noise_php-7.2.17  bm_1noise_php-7.2.17.c  bm_1noise_python-3.6.7  bm_1noise_python-3.6.7.c  bm_2noise_null.c  bm_2noise_php-7.2.17.c  bm_2noise_python-3.6.7.c  bm_4noise_null  bm_4noise_null.c  bm_4noise_php-7.2.17  bm_4noise_php-7.2.17.c  bm_4noise_python-3.6.7  bm_4noise_python-3.6.7.c  foo.c  make_trace_null.c  make_trace_php-7.2.17.c  make_trace_python-3.6.7.c  naive.c  switchtest.c  usermgmt.c  usermgmt.py
test2/: input.txt  layout.txt  opseq.txt  opt_input.txt  opt_layout.txt  opt_opseq.txt  opt_trace.txt  trace.txt
tracer/: init.sh  makefile.rules  tracer.cpp
(+22 files in other folders)
